# CDPKit

./: .clang-format  .gitignore  Authors.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYING  ChangeLog.txt  Copying.txt  GaussianShapeFunctionAlignment.cpp  GaussianShapeFunctionAlignmentExport.cpp  Install.txt  README.md  Readme.txt  Version  api_doc_to_fix.txt  pyproject.toml  setup.py
Apps/: CMakeLists.txt
Apps/ChOX/: AboutDialog.cpp  AboutDialog.hpp  AlignmentEditWidget.cpp  AlignmentEditWidget.hpp  ArrowStyleEditWidget.cpp  ArrowStyleEditWidget.hpp  AtomColorButton.cpp  AtomColorButton.hpp  AtomColorSettingsEditWidget.cpp  AtomColorSettingsEditWidget.hpp  AtomGeneralSettingsEditWidget.cpp  AtomGeneralSettingsEditWidget.hpp  AtomSettingsEditWidget.cpp  AtomSettingsEditWidget.hpp  BondSettingsEditWidget.cpp  BondSettingsEditWidget.hpp  CDPLFwd.hpp  CMakeLists.txt  CTabVersionEditWidget.cpp  CTabVersionEditWidget.hpp  Clipboard.cpp  Clipboard.hpp  ClipboardData.cpp  ClipboardData.hpp  ColorEditWidget.cpp  ColorEditWidget.hpp  ConcreteDataRecord.hpp  ControlParameter.cpp  ControlParameter.hpp  ControlParameterDefault.cpp  ControlParameterDefault.hpp  ControlParameterFunctions.cpp  ControlParameterFunctions.hpp  DataRecord.hpp  DataRecordPainter.cpp  DataRecordPainter.hpp  DataRecordPropertyView.cpp  DataRecordPropertyView.hpp  DataRecordVisitor.hpp  DataSet.cpp  (+112 more)
Apps/ChOX/Icons/: chox.rc
Apps/ChOx/: AboutDialog.cpp  AboutDialog.hpp  AlignmentEditWidget.cpp  AlignmentEditWidget.hpp  ArrowStyleEditWidget.cpp  ArrowStyleEditWidget.hpp  AtomColorButton.cpp  AtomColorButton.hpp  AtomColorSettingsEditWidget.cpp  AtomColorSettingsEditWidget.hpp  AtomGeneralSettingsEditWidget.cpp  AtomGeneralSettingsEditWidget.hpp  AtomSettingsEditWidget.cpp  AtomSettingsEditWidget.hpp  BondSettingsEditWidget.cpp  BondSettingsEditWidget.hpp  CDPLFwd.hpp  CMakeLists.txt  CTabVersionEditWidget.cpp  CTabVersionEditWidget.hpp  ColorEditWidget.cpp  ColorEditWidget.hpp  ConcreteDataRecord.hpp  ControlParameter.cpp  ControlParameter.hpp  ControlParameterDefault.cpp  ControlParameterDefault.hpp  ControlParameterFunctions.cpp  ControlParameterFunctions.hpp  DataRecord.hpp  DataRecordPainter.cpp  DataRecordPainter.hpp  DataRecordVisitor.hpp  DataSet.cpp  DataSet.hpp  DataSetPagePainter.cpp  DataSetPagePainter.hpp  DataSetPageView.cpp  DataSetPageView.hpp  DataSetPrinter.cpp  (+77 more)
Apps/ChOx/Icons/: chox.icns
Apps/CmdLine/: CMakeLists.txt
Apps/CmdLine/ConfGen/: CMakeLists.txt  CommonFunctions.hpp  ConfGenImpl.cpp  ConfGenImpl.hpp  Main.cpp
Apps/CmdLine/GenFragLib/: CMakeLists.txt  GenFragLibImpl.cpp  GenFragLibImpl.hpp  Main.cpp
Apps/CmdLine/IsoGen/: CMakeLists.txt  IsoGenImpl.cpp  IsoGenImpl.hpp  Main.cpp
Apps/CmdLine/Lib/: CMakeLists.txt  CmdLineBase.cpp  CmdLineBase.hpp  HelperFunctions.cpp  HelperFunctions.hpp
Apps/CmdLine/PSDCreate/: CMakeLists.txt  Main.cpp  PSDCreateImpl.cpp  PSDCreateImpl.hpp
Apps/CmdLine/PSDInfo/: CMakeLists.txt  Main.cpp  PSDInfoImpl.cpp  PSDInfoImpl.hpp
Apps/CmdLine/PSDMerge/: CMakeLists.txt  Main.cpp  PSDMergeImpl.cpp  PSDMergeImpl.hpp
Apps/CmdLine/PSDScreen/: CMakeLists.txt  Main.cpp  PSDScreenImpl.cpp  PSDScreenImpl.hpp
Apps/CmdLine/ShapeScreen/: CMakeLists.txt  Main.cpp  ShapeScreenImpl.cpp  ShapeScreenImpl.hpp
Apps/CmdLine/SimScreen/: CMakeLists.txt  CosineSimilarity.cpp  CosineSimilarity.hpp  DaylightFPCalculator.cpp  DaylightFPCalculator.hpp  DescriptorCalculator.cpp  DescriptorCalculator.hpp  DiceSimilarity.cpp  DiceSimilarity.hpp  ECFPCalculator.cpp  ECFPCalculator.hpp  EuclideanDistance.cpp  EuclideanDistance.hpp  EuclideanSimilarity.cpp  EuclideanSimilarity.hpp  HammingDistance.cpp  HammingDistance.hpp  MACCSFPCalculator.cpp  MACCSFPCalculator.hpp  Main.cpp  ManhattanDistance.cpp  ManhattanDistance.hpp  ManhattanSimilarity.cpp  ManhattanSimilarity.hpp  Pharm2DFPCalculator.cpp  Pharm2DFPCalculator.hpp  Pharm3DFPCalculator.cpp  Pharm3DFPCalculator.hpp  PubChemFPCalculator.cpp  PubChemFPCalculator.hpp  ScoringFunction.hpp  ScreeningProcessor.cpp  ScreeningProcessor.hpp  SimScreenImpl.cpp  SimScreenImpl.hpp  TanimotoSimilarity.cpp  TanimotoSimilarity.hpp  TverskySimilarity.cpp  TverskySimilarity.hpp
Apps/CmdLine/SimSearch/: CMakeLists.txt  DescriptorCalculator.hpp  Main.cpp  ScoringFunction.hpp  ScreeningProcessor.hpp  ScreeningResult.hpp  SimSearchImpl.cpp  SimSearchImpl.hpp
Apps/CmdLine/StructGen/: CMakeLists.txt  Main.cpp  StructGenImpl.cpp  StructGenImpl.hpp
Apps/CmdLine/SubSearch/: CMakeLists.txt  Main.cpp  SubSearchImpl.cpp  SubSearchImpl.hpp
Apps/CmdLine/TautGen/: CMakeLists.txt  Main.cpp  TautGenImpl.cpp  TautGenImpl.hpp
Apps/ConfGen/: CMakeLists.txt  ConfGenImpl.cpp  ConfGenImpl.hpp  Main.cpp
Apps/GenFragLib/: CMakeLists.txt  GenFragLibImpl.cpp  GenFragLibImpl.hpp  Main.cpp
Apps/Internal/: CMakeLists.txt  LogSReg.cpp  XLogPReg.cpp
Apps/Lib/: CMakeLists.txt  CmdLineBase.cpp  CmdLineBase.hpp  HelperFunctions.cpp  HelperFunctions.hpp  SystemInfo.hpp  SystemInfo.hpp.in
Apps/PSDCreate/: CMakeLists.txt  Main.cpp  PSDCreateImpl.cpp  PSDCreateImpl.hpp
Apps/PSDInfo/: CMakeLists.txt  Main.cpp  PSDInfoImpl.cpp  PSDInfoImpl.hpp
Apps/PSDMerge/: CMakeLists.txt  Main.cpp  PSDMergeImpl.cpp  PSDMergeImpl.hpp
Apps/PSDScreen/: CMakeLists.txt  Main.cpp  PSDScreenImpl.cpp  PSDScreenImpl.hpp
Apps/StructGen/: CMakeLists.txt  Main.cpp  StructGenImpl.cpp  StructGenImpl.hpp
Apps/TautGen/: CMakeLists.txt  Main.cpp  TautGenImpl.cpp  TautGenImpl.hpp
Doc/: CMakeLists.txt
Doc/C++-API/: CMakeLists.txt  Doxyfile.in  LGPL.doc  Mainpage.doc  Modules.doc  Namespaces.doc  References.doc
Doc/Doxygen/: CMakeLists.txt
Doc/Doxygen/C++-API/: CMakeLists.txt  CopyDocSourceFiles.cmake.in  CopyHeaderFiles.cmake.in  Doxyfile-xml.in  Doxyfile.in  Mainpage.doc  Namespaces.doc
Doc/Doxygen/Python-API/: CMakeLists.txt  CXXAPIDocMergeInfo.txt  CopyDocSourceFiles.cmake.in  (+9 more)
Doc/Python-API/: CMakeLists.txt  Doxyfile.in  External.doc  Mainpage.doc  Modules.doc  Namespaces.doc  References.doc
Doc/Sphinx/: CMakeLists.txt  PostProcPythonTutorialDoc.py  conf.py.in  index.rst
(+8149 files in other folders)
